# onnxcustomop

./: CMakeLists.txt  Dockerfile.base  Dockerfile.cuda  README.md  addnumbop.cpp  addop.cpp  addop.h  buildcontainers.sh  registeraddop.cpp  testaddno.py
cmake/: onnxruntimeConfig.cmake
docker/: Dockerfile.onnxext
